--- a/HospitalManagment/appsettings.json
+++ b/HospitalManagment/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "HospitalDB": "Server=(localdb)\\MSSQLLocalDB;Database=HospitalDB;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
