Add: Adding JWT token and login Email and Password in Hospital migration

--- a/HospitalManagment/appsettings.json
+++ b/HospitalManagment/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "HospitalDB": "Server=(localdb)\\MSSQLLocalDB;Database=HospitalDB;Trusted_Connection=True;"
   },
+  "JWT": {
+    "key": "Rushikesh_Namdev_Koshti_15796_rutik_koshti",
+    "Issuer": "https://localhost:7137",
+    "Audience": "https://localhost:7137"
+  },
   "AllowedHosts": "*"
 }
