--- a/HospitalManagment/appsettings.json
+++ b/HospitalManagment/appsettings.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
     "HospitalDB": "Server=(localdb)\\MSSQLLocalDB;Database=HospitalDB;Trusted_Connection=True;"
   },
-  "JWT": {
+  "Jwt": {
     "key": "Rushikesh_Namdev_Koshti_15796_rutik_koshti",
     "Issuer": "https://localhost:7137",
     "Audience": "https://localhost:7137"
